@@ -6,6 +6,8 @@
 	* Put etoile_system, EtoileMenuServer and AZBackground in blacklist.
 	* Make sure icon is properly retained.
 	* Avoid AZDock window through blacklist.
+	* Fix bug of launching GNUstep application. 
+          [NSWorkspace launchApplication:] does not always work.
 
 2006-12-16 Yen-Ju Chen <yjchenx at gmail>
 
